Potential fix to remove highlight on buttons on mobile devices.

--- a/static/main.css
+++ b/static/main.css
@@ -8,6 +8,8 @@ button::-moz-focus-inner { border: 0; }
 
 .button
 {
+	-webkit-tap-highlight-color: rgba(0,0,0,0); 
+	
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
